--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "dependencies": {
     "fastify": "^4.26.2",
     "openai": "^4.56.0",
-    "zod": "^3.23.8",
-    "cors": "^2.8.5"
+    "zod": "^3.23.8"
   }
 }
